--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   
   
   <div class="w-48 h-48 rounded-full mb-6 bg-red-100">
-    <img src="/photo.png" class="w-full p-2 h-full object-contain" alt="Xinger (Stella) Cao" />
+    <img src="photo.png" class="w-full p-2 h-full object-contain" alt="Xinger (Stella) Cao" />
   </div>
   
 
