--- a/about/index.html
+++ b/about/index.html
@@ -75,7 +75,7 @@
   class="mb-16 max-w-5xl mx-auto px-4 prose lg:prose-lg prose-blue dark:prose-dark"
 >
   <h1 class="font-bold text-3xl">About Me</h1>
-  <p><strong>Nice to meet you!!🧸 I’m Stella from Shanghai, China.</strong></p>
+  <p><strong>Nice to meet you!!🧸 I’m Xinger(Stella) from Shanghai, China.</strong></p>
 <p>With a formal education in educational technology and psychology, I am passionate about implementing educational interventions with emerging technologies.</p>
 <p>I am a master’s candidate for the LST (Learning Sciences and Technologies) program at the University of Pennsylvania. Besides, I am currently a user operationist intern working at EdwithU, a Chinese online community of education practitioners. Previous, I was a product manager intern at Jiliguala, mainly assisting in designing a  gamification learning app for preschoolers in China.</p>
 <p>In my leisure time, I am an instructional designer, programming learner, media producer, podcast listener, and comedy lover. I see myself as a reasonable and empathetic storyteller. I learned video editing and basic graphic design on my own to express my ideas visually.</p>
