--- a/project/number-pioneer/index.html
+++ b/project/number-pioneer/index.html
@@ -78,7 +78,7 @@
 <li>Final course project for <em>EDUC552: Video Games and Virtual Worlds as Sites for Learning and Engagement</em>.</li>
 <li>Personally produced the game prototype. Conducted the needs assessment and competitive research in game design document.</li>
 </ul>
-<p><img src="/imgs/NumberPioneer_logo.png" alt="NumberPioneer_logo"></p>
+<p><img src="/NumberPioneer_logo.png" alt="NumberPioneer_logo"></p>
 <hr>
 <p>☞ Full <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:f9b41f63-5e4a-3574-8a5c-69716d88e2e6">Game Design Document</a></p>
 </article>
